---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:41:9
   |
41 |     for a in range(1):
   |         ^
   |

PLR1704 Redefining argument with the local name `i`
  --> redefined_argument_from_local.py:46:9
   |
46 |     for i in range(10):
   |         ^
   |

PLR1704 Redefining argument with the local name `e`
  --> redefined_argument_from_local.py:53:25
   |
53 |     except Exception as e:
   |                         ^
   |

PLR1704 Redefining argument with the local name `f`
  --> redefined_argument_from_local.py:58:24
   |
58 |     with open('', ) as f:
   |                        ^
   |

PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:63:24
   |
63 |     with context() as (a, b, c):
   |                        ^
   |

PLR1704 Redefining argument with the local name `b`
  --> redefined_argument_from_local.py:63:27
   |
63 |     with context() as (a, b, c):
   |                           ^
   |

PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:68:24
   |
68 |     with context() as [a, b, c]:
   |                        ^
   |

PLR1704 Redefining argument with the local name `b`
  --> redefined_argument_from_local.py:68:27
   |
68 |     with context() as [a, b, c]:
   |                           ^
   |

PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:73:51
   |
73 |     with open('foo.py', ) as f, open('bar.py') as a:
   |                                                   ^
   |

PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:79:13
   |
79 |         for a in range(1):
   |             ^
   |

PLR1704 Redefining argument with the local name `b`
  --> redefined_argument_from_local.py:85:13
   |
85 |         for b in range(1):
   |             ^
   |

PLR1704 Redefining argument with the local name `a`
  --> redefined_argument_from_local.py:91:13
   |
91 |         for a in range(1):
   |             ^
   |

PLR1704 Redefining argument with the local name `b`
  --> redefined_argument_from_local.py:93:13
   |
93 |         for b in range(1):
   |             ^
   |
